[package]
name = "helios-build"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"
#
# Report a specific error in the case that the toolchain is too old for
# let-else:
#
rust-version = "1.65.0"

[dependencies]
anyhow = "1"
flate2 = { version = "1", features = [ "zlib" ] }
getopts = "0.2"
helios-build-utils = { git = "https://github.com/oxidecomputer/helios-omicron-brand.git" }
json5 = "0.4.1"
libc = "0.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
slog = "2.5"
slog-term = "2.5"
tar = "0.4"
time = { version = "0.3" }
toml = "0.8"
walkdir = "2.3"
